se agrega crud completo de transactions. se crean relacion entre transactions y meerchants. se agrega doc de swagger
